res/examples/invalid/range_start_inclusive_no_end.eg
1..=;

// out: SyntaxError: unexpected ";"; expected: ["number"]